--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,15 @@
-html,
-body {
+* {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: Arial, sans-serif;
+  color: #212121;
+}
+
+body {
+  background-color: #212121;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 a {
@@ -10,6 +17,19 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+button {
+  cursor: pointer;
+}
+
+
+@media(max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media(max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
 }
