--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@ body {
   background-color: #212121;
   max-width: 1200px;
   margin: 0 auto;
+  min-height: 100%;
 }
 
 a {
@@ -31,5 +32,17 @@ button {
 @media(max-width: 720px) {
   html {
     font-size: 87.5%;
+  }
+}
+
+@media(max-width: 480px) {
+  html {
+    font-size: 81.25%;
+  }
+}
+
+@media(max-width: 360px) {
+  html {
+    font-size: 75%;
   }
 }
